# cookiecutter_maker-project

./: .coveragerc  .gitignore  Makefile  README.rst  cookiecutterize.py  pattern_match_example.py  poetry-lock-hash.json  pygitrepo-config.json  pyproject.toml  release-history.rst  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  run_cookiecutter_maker.py  setup_codecov_and_readthedocs.py
.github/workflows/: main.yml
cookiecutter_maker/: api.py  exc.py  maker.py  parameter.py  path_matcher.py  str_replace.py
cookiecutter_maker/tests/: case.py
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/01-Quick-Start/: index.rst  new_project_like_python_requests.py
docs/source/cookiecutter_maker/: __init__.rst  api.rst  exc.rst  maker.rst  parameter.rst  path_matcher.rst  str_replace.rst  strutils.rst
examples/example1/: test_cookiecutter_maker.py
examples/example1/my_package-project/: README.rst  pyproject.toml
examples/example1/my_package-project/tests/: test_impl.py
genai/: README.rst  generate_knowledge_base.py  meta.json
tests/: all.py  test_import.py  test_maker.py  test_parameter.py  test_path_matcher.py  test_str_replace.py  test_stringutils.py
tests/examples/: all.py  test_example1.py
tests/examples/example1/my_package-project/: LICENSE.txt  pyproject.toml
tests/examples/example1/my_package-project/my_package/template/: index.html.jinja
tests/examples/example1/{{ cookiecutter.package_name }}-project/: README.rst  pyproject.toml
tests/examples/example1/{{ cookiecutter.package_name }}-project/{{ cookiecutter.package_name }}/template/: index.html.jinja
tests/my_package-project/: README.rst
(+8 files in other folders)
