[project]
name = "my_package"
version = "0.1.1"
description = "..."
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Alice", email = "alice@email.com" }, # author
]
maintainers = [
    { name = "Alice", email = "alice@email.com" }, # maintainer
]
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
